--- a/content/pages/用紙関連.md
+++ b/content/pages/用紙関連.md
@@ -2,12 +2,12 @@
 title: 用紙関連
 path: /supply/paper
 ---
+<h1>用紙関連</h1>
 当社は2014年より老舗メーカー㈱オストリッチダイヤ（1958年創業）製品を承継し、販売してまいりました。同製品は、国内自社工場生産で安心、高品質として
 高い評価をいただいております。\
 　＜販売実績＞通信販売会社様、建築・設計会社様、官公庁様など\
 　＜対応機種＞HP、エプソン、キヤノンなど、国内流通の各種プリンタ\
 　＜サイズ＞ロール紙・カット紙や、仕様はお客様のご要望に合わせて製造します。
-<h1 style="color:blue">あああ</h1>
 
 ## インクジェット用紙
 
