Update 固定ページ “ごあいさつ”

--- a/content/pages/ごあいさつ.md
+++ b/content/pages/ごあいさつ.md
@@ -3,3 +3,8 @@ title: ごあいさつ
 path: /message
 ---
 <h1>ごあいさつ</h1>
+当社は1974年の創業以来、最先端のIT技術を持って、より高いクオリティのサービス・製品を目指して参りました。<br><br>
+お陰様で業容も順調に拡大し、入力センター、開発センター、コールセンター、サーバ管理のIDC、データ運用センター、印刷工場、印字・発送代行のアウトプットセンター、IT農場など、各地に自社センターを構え、ディーソルグループでトータル的にワンストップソリューションを実現できる企業に成長して参りました。
+2014年12月には社名を株式会社ディーソルに変更致しました。
+今後とも、CSRの理念の下、サスティナブルな社会を目指し、ディーソルグループ全社一丸となって邁進して参ります。<br><br>
+どうぞ変わらぬご愛顧とご支援を賜りますよう、よろしくお願い申し上げます。
