パンくずリスト追加

--- a/content/pages/ごあいさつ.md
+++ b/content/pages/ごあいさつ.md
@@ -1,6 +1,6 @@
 ---
-title: ごあいさつ
-path: /message
+title: 企業情報
+path: /company/message
 ---
 <h1>ごあいさつ</h1>
 当社は1974年の創業以来、最先端のIT技術を持って、より高いクオリティのサービス・製品を目指して参りました。<br><br>
