ページ追加

--- a/content/pages/会社概要.md
+++ b/content/pages/会社概要.md
@@ -38,16 +38,141 @@ FSC®/ COC認証 【適用範囲：本社・首都圏オペレーションセン
 環境マネジメントシステム ISO14001 :2015 【適用範囲：首都圏オペレーションセンター】 登録番号：ASR E2347<br>
 情報セキュリティマネジメントシステム ISO/IEC27001 :2022 【適用範囲：DP&MS事業部】 登録番号：JSAI148<br>
 建築士事務所登録　【株式会社ディーソル一級建築士事務所】登録番号第66653号</td></tr>
-      <tr><th>拠点所在地</th><td><div style="display:flex; gap:12px; align-items:flex-start;">
-<img src="/uploads/dsolhonsya-225x300.png" alt="" style="width:160px; height:auto;" />
+<tr><th>拠点所在地</th><td><div style="display:flex; gap:12px; align-items:flex-start;">
+
+<div style="display:flex; flex-direction:column; gap:12px; align-items:flex-start; margin-top:8px;">
+  <div style="display:flex; gap:12px; align-items:flex-start;">
+
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/dsolhonsya-225x300.png" alt="" style="width:160px; height:auto;" />
 <div><p>本社</p>
 〒103-0013 東京都中央区日本橋人形町1-8-4 東商共同ビル<br>
-TEL:03-3668-4361</div></td></tr>
+TEL:03-3668-4361</div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>北海道営業所</p><br>
+      〒004-0015 北海道札幌市厚別区下野幌テクノパーク 1-1-10 札幌市エレクトロニクスセンター306<br>
+      TEL:011-805-4361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>東北営業所</p><br>
+      〒980-0802 宮城県仙台市青葉区二日町6-23 第2シャンポール青葉206<br>TEL:022-265-4361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>中日本支店 中日本営業所</p><br>
+      〒461-0001 愛知県名古屋市東区泉1-22-26 成田久屋ビル6階<br>TEL:052-954-4361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>西日本支店</p><br>
+      〒541-0054 大阪府大阪市中央区南本町2-1-8　創建本町ビル4階<br>TEL:06-6262-4361
+    </div>
+  </div>
+    　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>西日本支店 中・四国営業所</p><br>
+      〒732-0811 広島県広島市南区段原1-4-8 ホーププラグレス201<br>TEL:082-264-4361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>九州支店</p><br>
+      〒812-0035 福岡県福岡市博多区中呉服町 3-11 キョーエイ呉服町ビル5階<br>TEL:092-271-4361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>九州支店　長崎営業所</p><br>
+      〒850-0046 長崎県長崎市幸町7-1 STADIUM CITY NORTH 6階<br>TEL:095-870-3361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>BPOセンター</p><br>
+      〒344-0063　埼玉県春日部市緑町6-1-12 春日部アイランドビル2号館<br>TEL：048-739-3371
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>首都圏オペレーションセンター(SOC)</p><br>
+      〒359-0011 埼玉県所沢市南永井667-1<br>TEL：04-2951-4361
+    </div>
+  </div>
+</div></td></tr>
       <tr><th>グループ会社</th><td><div style="display:flex; gap:12px; align-items:flex-start;">
+
+<div style="display:flex; flex-direction:column; gap:12px; align-items:flex-start; margin-top:8px;">
+  <div style="display:flex; gap:12px; align-items:flex-start;">
 <img src="/uploads/web_スタジアムノース外観-300x200.jpg" alt="" style="width:160px; height:auto;" />
 <div><p>株式会社ディーソルNSP</p><br>
 〒850-0046 長崎県長崎市幸町7-1 STADIUM CITY NORTH 6階<br>
-TEL:095-870-3361</div></td></tr>
+TEL:095-870-3361</div>
+  </div>
+  <div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>株式会社ディーソル九州オペレーションセンター(QOC)</p><br>
+      〒842-0002 佐賀県神埼市神埼町田道ヶ里2889<br>
+      TEL:0952-55-8361
+    </div>
+  </div>
+　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>株式会社ディーソルHPI 佐世保事業所</p><br>
+      〒859-3226 長崎県佐世保市崎岡町3068番地9 佐世保情報産業プラザ第2棟<br>
+      TEL:0956-39-4361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>株式会社ディーソルHPI</p><br>
+      〒853-0007 長崎県五島市福江町5-1 NTTビル<br>
+      TEL:0959-74-5601
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>株式会社ディーソルHPP</p><br>
+      〒859-1415 長崎県島原市有明町大三東戊1327 島原市有明庁舎別館<br>
+      TEL:0957-73-6361
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>株式会社ディーソル・メディックス</p><br>
+      〒174-0056 東京都板橋区志村3-28-7<br>
+      TEL:03-5994-1681
+    </div>
+  </div>
+  　<div style="display:flex; gap:12px; align-items:flex-start;">
+    <img src="/uploads/placeholder2.jpg" alt="拠点外観" style="width:160px; height:auto;" />
+    <div>
+      <p>株式会社HPIファーム</p><br>
+      〒853-0011 長崎県五島市下大津町712番地26<br>
+      TEL:0959-72-2323
+    </div>
+  </div>
+</div></td></tr>
     </tbody>
 
   </table>
